k8s/demo1_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: demo1
          image: panfio/demo1
          ports:
            - containerPort: 80
