k8s/demo1_clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo1-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 80
      targetPort: 80
